welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
var x = getMondeHauteur
var T = new Array[Color](x)
for (i <- 1 to x)
	{T(i)= getCouleurSol}
def dessiner()
	baisseBrosse; leveBrosse


for (j <- 1 to (x-1)) {
for (i <- 1 to x)
{setCouleurBrosse(T(i))
	dessiner()
	avance()	
	}
	gauche()
	avance()
	doite()








}
}